--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
-  "name": "@just0rick/litecalendar",
-  "version": "0.1.0",
-  "description": "A simple customizable calendar component",
+  "name": "my-webpack-project",
+  "version": "1.0.0",
+  "description": "My webpack project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --mode=production --node-env=production",
+    "build:dev": "webpack --mode=development",
+    "build:prod": "webpack --mode=production --node-env=production",
+    "watch": "webpack --watch",
+    "serve": "webpack serve"
   },
   "repository": {
     "type": "git",
@@ -20,5 +25,22 @@
   "bugs": {
     "url": "https://github.com/Just0Rick/LiteCalendar/issues"
   },
-  "homepage": "https://github.com/Just0Rick/LiteCalendar#readme"
+  "homepage": "https://github.com/Just0Rick/LiteCalendar#readme",
+  "devDependencies": {
+    "@types/luxon": "^3.0.2",
+    "@webpack-cli/generators": "^2.5.0",
+    "css-loader": "^6.7.1",
+    "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.6.1",
+    "prettier": "^2.7.1",
+    "style-loader": "^3.3.1",
+    "ts-loader": "^9.4.1",
+    "typescript": "^4.8.4",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.11.1"
+  },
+  "dependencies": {
+    "luxon": "^3.0.4"
+  }
 }
